objects/maps__LiveAsyncError__c.object
<CustomObject>
    <fields>
        <fullName>maps__ClassName__c</fullName>
        <description>The name of the class and, optionally the method, that the error originated.</description>
        <inlineHelpText>The name of the class and, optionally the method, that the error originated.</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DeviceId__c</fullName>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ErrorType__c</fullName>
        <description>The type of error received.</description>
        <inlineHelpText>The type of error received.</inlineHelpText>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__LiveDailySummaryConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the summary that had errors</description>
        <inlineHelpText>Reference to the summary that had errors</inlineHelpText>
        <label>Live Daily Summary Config</label>
        <referenceTo>maps__LiveDailySummaryConfig__c</referenceTo>
        <relationshipLabel>Live Async Errors</relationshipLabel>
        <relationshipName>LiveAsyncErrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Message__c</fullName>
        <description>The value of the message received.</description>
        <inlineHelpText>The value of the message received.</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__ObjectFieldValues__c</fullName>
        <description>The entire sObject in JSON format, if available.</description>
        <inlineHelpText>The entire sObject in JSON format, if available.</inlineHelpText>
        <label>Object Field Values</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>maps__ObjectId__c</fullName>
        <description>The Id of the sObject on which this error occurred.</description>
        <inlineHelpText>The Id of the sObject on which this error occurred.</inlineHelpText>
        <label>Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ReportDate__c</fullName>
        <description>This date represents the specific Summary date MAIO was requested to return, not the date the request was run.</description>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__SobjectType__c</fullName>
        <label>Sobject Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__StackTrace__c</fullName>
        <description>The value of the stack trace received.</description>
        <inlineHelpText>The value of the stack trace received.</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Live Async Error</label>
    <nameField>
        <displayFormat>MAPS_ERROR {000000}</displayFormat>
        <label>Maps Live Async Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Async Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>